--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 metadata:
    name: nginx-deployments
 spec:
-   replicas: 2
+   replicas: 1
    selector:
     matchLabels:
      app: nginx
@@ -17,3 +17,22 @@ spec:
           image: nginx:1.14.1
           ports:
           - containerPort: 80
+          
+          
+          
+---
+kind: Service                             # Defines to create Service type Object
+apiVersion: v1
+metadata:
+  name: nginx-svc
+  labels:
+    app: nginx
+spec:
+  type: NodePort
+  ports:
+    - port: 80                               # Containers port exposed
+      nodePort: 30275                   # Pods port
+  selector:
+    app: nginx                          # Apply this service to any pods which has the specific label
+
+
